--- a/README
+++ b/README
@@ -6,13 +6,14 @@
 
 == DESCRIPTION
 
-VClog is an cross-VCS/SCM changelog generator.
+VCLog is a versitle cross-VCS/SCM changelog generator.
+It currently supports Git and Subversion.
 
 
 == SYNOPSIS
 
-VCLog generates changelogs. It supports a few different formats. The default
-format is standard GNU text style. From a repository's root directory try:
+By default the format is a standard GNU text style. From a
+repository's root directory try:
 
   $ vclog
 
@@ -25,14 +26,20 @@ See 'vclog --help' for more options.
 
 == RELEASE NOTES
 
-Please see RELEASE file.
+Please see HISTORY file.
 
 
-== LICENSE & COPYRIGHT
+== COPYRIGHTS
 
-VCLog
+Copyright (c) 2009 Thomas Sawyer
 
-Copyright (c) 2008,2009 TigerOps.org
+MIT License. See LICENSE or COPYING file for more details.
 
-VCLog is distributed under the terms of the GPLv3 license.
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
 
