bug: fixed delta groupings and other improvements

--- a/lib/vclog/templates/history.rdoc
+++ b/lib/vclog/templates/history.rdoc
@@ -1,12 +1,12 @@
 = <%= title %>
-<% releases.each do |release| %><% tag = release.tag %>
+<% history.releases.sort.each do |release| %><% tag = release.tag %>
 == <%= tag.name %> / <%= tag.date.strftime('%Y-%m-%d') %>
 
 <%= h tag.message.strip %> (<%= tag.author %>)
 
-<% if extra %>Changes:
-<% groups(release.changes).each do |number, changes| %>
+<% if options.extra %>Changes:
+<% release.groups.each do |number, changes| %>
 * <%= changes.size %> <%= changes[0].type_phrase %>
 <% changes.sort{|a,b| b.date <=> a.date}.each do |entry| %>
-    * <%= entry.message %> <% if rev %>(#<%= entry.revision %>)<% end %><% end %>
+    * <%= entry.message %> <% if options.revision %>(#<%= entry.revision %>)<% end %><% end %>
 <% end %><% end %><% end %>
