admin: fix typos in most recent HISTORY entry

--- a/HISTORY.rdoc
+++ b/HISTORY.rdoc
@@ -2,7 +2,7 @@
 
 == 1.6.0 / 2010-06-23
 
-Previous version utilized a system of "commit tagging" to identify types of commits. This proved less thant optimal --it was unconventional but worse it was easy to forget to put the proper label in the message. The new version of VClog use a customizable heuristics systems instead. Rather then be limited to a strict syntax structure, you can write matching rules in .config/vclog/rules.rb that determine thte commit type, and set descriptive labels for each type. This makesit very easy to get excellent History output.
+Previous versions utilized a system of "commit tagging" to identify types of commits. This proved less than optimal --it was unconventional, but worse it was easy to forget to put the proper label in the message. The new version of VClog uses a customizable heuristics systems instead. Rather than be limited to a strict syntax structure, you can write matching rules in .config/vclog/rules.rb that determine the commit type, and set descriptive labels for each type. This makes it very easy to get excellent History output. Also in this release the command-line interface has changed to use subcommands. And the default output format is now an ANSI-color GNU-like format. Use `-f gnu` to get the old default format.
 
 Changes:
 
