doc: clarify the scm vclog works on in README

--- a/README.rdoc
+++ b/README.rdoc
@@ -7,7 +7,7 @@
 == DESCRIPTION
 
 VCLog is a versitle cross-VCS/SCM changelog generator.
-It currently supports Git and Subversion.
+It currently supports Git, Hg and (limited) Subversion.
 
 
 == SYNOPSIS
