admin: update HISTORY and ronn file to match latest changes

--- a/HISTORY.rdoc
+++ b/HISTORY.rdoc
@@ -1,5 +1,16 @@
 = RELEASE HISTORY
 
+== 1.8.1 / 2010-11-22
+
+This release corrects the tag dates on Histories. Where possible the tag date is used rather than the commit date (of the most recent commit made relative to the tag). Primarily this effects git repositories --a separate tag date is not supported by all SCMs. This release also fixes a bug in the hg adapter that prevented auto-tagging.
+
+Changes:
+
+* Use tag date instead of commit date in history.
+* Fix typo in hg adapter's autotag method.
+* Add history file option to autotag command.
+
+
 == 1.8.0 / 2010-11-21
 
 Under the hood, VCLog now has a Repo class that acts as a central controller. This has improved the code base substantially and should could to do so as this new design is further embraced. This release also introdces a new `autotag` feature, which makes it possible to "reverse engineer" a Release History file. It will parse the entries from a HISTORY.* file and ensure that corresponding tags exists in the version control system.
