--- a/README.rdoc
+++ b/README.rdoc
@@ -51,12 +51,12 @@ See 'vclog help' for more options.
 VCLog can also be used to intelligently bump versions. To see the current
 tag version:
 
-  $ vclog version
+  $ vclog-version
   1.1.0
 
 To see the next reasonable version based on current changes:
 
-  $ vclog bump
+  $ vclog-bump
   1.2.0
 
 VCLog can determine the appropriate version based on commit level. Any
