--- a/eg/changes.rdoc
+++ b/eg/changes.rdoc
@@ -1,144 +1,94 @@
-= VCLog
+[1mVCLog
+[0m
+[1m2011-12-11  7rans
+[0m
+  * [31mRules must now effect commit directly.[0m
+  * [32mFix change point option.[0m
 
-== 2011-11-06 7rans
+[1m2011-12-10  7rans
+[0m
+  * [32mFix defualt heuristics so full message is returned.[0m
 
-* Use confection library for vclog config. [major]
+[1m2011-12-09  7rans
+[0m
+  * [31mAdd support for change points.[0m
+  * [31mChange rules to take commits instead of messages.[0m
 
-== 2011-04-25 7rans
+[1m2011-12-08  7rans
+[0m
+  * [33mAdd file list to Changes class.[0m
+  * [32mFix git adapter markers.[0m
 
-* fix glob bug for rc file
-* use .vclog or config/vclog file rather than rules.rb file for configuration
+[1m2011-11-06  7rans
+[0m
+  * [31mUse confection library for vclog config.[0m
 
-== 2011-04-19 7rans
+[1m2010-11-20  7rans
+[0m
+  * [33mpolish html templates[0m
 
-* change case of meta files
+[1m2010-11-19  7rans
+[0m
+  * [33muse #cli instead of #main method[0m
+  * [33madd #rev alias to Change class; other adjustments[0m
+  * [33madd manpages[0m
 
-== 2010-11-21 7rans
+[1m2010-11-04  7rans
+[0m
+  * [33mprevent warnings about method redefinition[0m
 
-* history file versions can use underscores (subversion style)
-* autotag can take alternate history file option
-* tag commit date is not necessarily the same as the tag date
-* extraction methods return objects instead of arrays
+[1m2010-06-24  7rans
+[0m
+  * [31mchange interface of heuristics to accept message and matchdata[0m
 
-== 2010-11-20 7rans
+[1m2010-06-23  7rans
+[0m
+  * [33mfix format for syckle plugin[0m
+  * [33muse .rss and .atom extensions[0m
+  * [33mupdates to website[0m
 
-* better history file glob
-* fix syckle plugin
-* use message file for all adapters
-* add dryrun and debugging output to tag method
-* autotag needs a list of all changes
+[1m2010-06-21  7rans
+[0m
+  * [33mfix help command add help banners[0m
+  * [33mplugin should use project.root not root, and Syckfile entry needs files not loadpath[0m
+  * [33madd level to syckle plugin[0m
+  * [33mupdate features to use subcommand[0m
 
-== 2010-11-19 7rans
+[1m2010-05-28  7rans
+[0m
+  * [31mre-orient design about vcs classes (partially complete)[0m
+  * [33madjust commandline help[0m
+  * [32mfixed delta groupings and other improvements[0m
 
-* escape tag messages by using #inspect
-* support tag prefix option
-* fix tag method in subversion adapter
-* auto tagging needs to adjust date too
-* rename  command to
-* fix options as Hash instead of OpenStruct
-* update cli commands to use repo
-* add #tag method to adapters
-* use a Repo class as a central controller
+[1m2010-05-27  7rans
+[0m
+  * [31madd Mercurial support; also renamed VCS to Adapters[0m
 
-== 2010-06-27 7rans
+[1m2010-05-26  7rans
+[0m
+  * [33mneed to use -e or --extra option to see Changes list in release history[0m
+  * [33muse gits --pretty option to simplify parsing[0m
+  * [32mSort release tags in correct order[0m
+  * [32mchange 'git-log' to 'git log'[0m
+  * [32mchange 'git-log' to 'git log'[0m
 
-* replace --detail option with opposite --summary option
-* rule block can take none, matadata, or message and matachdata
-* git adapter parses changes more robustly
+[1m2010-02-08  7rans
+[0m
+  * [33mmove lib/plugin to lib/plugins per new standard or PLugin gem[0m
+  * [32mfix version bumping and display[0m
 
-== 2010-06-24 7rans
+[1m2010-01-16  7rans
+[0m
+  * [31muse erb as template system for all formats[0m
+  * [33muse rdoc to generate history html (for now)[0m
+  * [32msyckle plugin now works with latest vclog changes[0m
 
-* change interface of heuristics to accept message and matchdata [major]
+[1m2010-01-02  7rans
+[0m
+  * [31msupport 'type:' fromat commit types[0m
 
-== 2010-06-23 7rans
-
-* add title to html changelog
-* fix git email value and imporve feed formats
-* work on atom and rss output formats
-
-== 2010-06-21 7rans
-
-* handle unset labels gracefully and improve default heuristics
-* add version command and continue to improve cli help
-* cli uses closest matching subcommand
-* add ansi format and fix tag date groupings
-* filter history by level
-* cli has subcommands and templates can be .rb or .erb
-* Heuristics system for categorizing commits
-
-== 2010-05-28 7rans
-
-* Merge branch 'master' of git@github.com:proutils/vclog
-* log examples [generate]
-* update syckle plugin to match refactoring
-* add atom support for release history
-* info methods need to be public
-* re-orient design about vcs classes (partially complete) [major]
-* fixed delta groupings and other improvements [bug]
-
-== 2010-05-27 7rans
-
-* add Mercurial support; also renamed VCS to Adapters [major]
-
-== 2010-05-26 7rans
-
-* add a canonical lib
-* use xmlsimple for SVN support
-* add first cucumber feature [test]
-* Sort release tags in correct order [bug]
-* change 'git-log' to 'git log' [bug]
-* change 'git-log' to 'git log' [bug]
-
-== 2010-02-08 7rans
-
-* fix version bumping and display [bug]
-
-== 2010-01-16 7rans
-
-* use erb as template system for all formats [major]
-* syckle plugin now works with latest vclog changes [bug]
-
-== 2010-01-02 7rans
-
-* support 'type:' fromat commit types [major]
-
-== 2009-11-14 7rans
-
-* use meta/name and meta/suite
-
-== 2009-10-26 7rans
-
-* readded markup output for changelog
-* renamed command.rb to cli.rb
-* fixed spelling of revision (from revison) [bug]
-* more refactoring and fixed SVN support
-* rewrote release history generator
-
-== 2009-10-23 7rans
-
-* added ad to website. I want my ! ;)
-* added some todo items
-* removed rdoc.task (automatic mode gets it)
-* adjust syckle config
-* upped version to 1.1
-* moved bin to command.rb
-* add website examples
-* moved bin to command.rb
-* update pom metadata
-
-== 2009-10-12 7rans
-
-* changed licenses to MIT
-* fixed typo in LICENSE
-* contact suffices
-* fixed syckle config
-* update tasks and metadata
-
-== 2009-10-06 7rans
-
-* reap became syckle
-
-== 2009-08-17 proutils
-
-* first commit
+[1m2009-10-26  7rans
+[0m
+  * [33mrenamed verbose to extra[0m
+  * [32mfixed spelling of revision (from revison)[0m
 
