--- a/HISTORY.rdoc
+++ b/HISTORY.rdoc
@@ -1,5 +1,15 @@
 = RELEASE HISTORY
 
+== 1.9.1 / 2011-12-13
+
+Fixes a couple of issues found with the last release.
+
+Changes:
+
+* Fix revision id in rss and atom formats.
+* Fix tag id in git tag parser.
+
+
 == 1.9.0 / 2011-12-12
 
 This is a BIG release and much has changed, so be sure to read the following
