--- a/eg/history.rdoc
+++ b/eg/history.rdoc
@@ -1,163 +1,182 @@
-[1mVCLog[0m
-[1m
-HEAD / 2011-12-13[0m
+= VCLog
+
+== HEAD / 2011-12-13
 
 Current Development (7rans)
 
+Changes:
+
 * 3 Major Enhancements
 
-    * [31mRules must now effect commit directly.[0m
-    * [31mAdd support for change points.[0m
-    * [31mChange rules to take commits instead of messages.[0m
+    * Rules must now effect commit directly.
+    * Add support for change points.
+    * Change rules to take commits instead of messages.
 
-* 2 Bug Fixes
+* 3 Bug Fixes
 
-    * [32mFix change point option.[0m
-    * [32mFix defualt heuristics so full message is returned.[0m
+    * Fix git tag id.
+    * Fix change point option.
+    * Fix defualt heuristics so full message is returned.
 
-[1m
-1.8.2 / 2011-12-08[0m
+
+== 1.8.2 / 2011-12-08
 
 This release changes the way in which vclog is configured to use the Confection
 gem. This means VCLog custom configuration for a project must go in a `vclog do`
-block in the `Confile` or `.confile` project file. In addtion this release
-brings the build config up to date and switches the project over to the
 BSD-2-Clause license. (7rans <transfire@gmail.com>)
+
+Changes:
 
 * 1 Major Enhancements
 
-    * [31mUse confection library for vclog config.[0m
+    * Use confection library for vclog config.
 
 * 1 Minor Enhancements
 
-    * [33mAdd file list to Changes class.[0m
+    * Add file list to Changes class.
 
 * 1 Bug Fixes
 
-    * [32mFix git adapter markers.[0m
+    * Fix git adapter markers.
 
-[1m
-1.8.0 / 2010-11-21[0m
+
+== 1.8.0 / 2010-11-21
 
  (7rans <transfire@gmail.com>)
+
+Changes:
 
 * 5 Minor Enhancements
 
-    * [33mpolish html templates[0m
-    * [33muse #cli instead of #main method[0m
-    * [33madd #rev alias to Change class; other adjustments[0m
-    * [33madd manpages[0m
-    * [33mprevent warnings about method redefinition[0m
+    * polish html templates
+    * use #cli instead of #main method
+    * add #rev alias to Change class; other adjustments
+    * add manpages
+    * prevent warnings about method redefinition
 
-[1m
-1.7.0 / 2010-06-27[0m
+
+== 1.7.0 / 2010-06-27
 
 In this release the heuristics interface has changed such that the block is passed the commit message and the matchdata, instead of  the previous matchdata splat. The rule can alos return either the sybolic label or a two element array of label and new message, which allows the rule to "massage" the message as needed. This release also improves the git log parser to be much more robust. (7rans <transfire@gmail.com>)
 
+Changes:
+
 * 1 Major Enhancements
 
-    * [31mchange interface of heuristics to accept message and matchdata[0m
+    * change interface of heuristics to accept message and matchdata
 
 * 1 Minor Enhancements
 
-    * [33mfix format for syckle plugin[0m
+    * fix format for syckle plugin
 
-[1m
-1.6.1 / 2010-06-24[0m
+
+== 1.6.1 / 2010-06-24
 
 This release repairs the Atom feed format and adds an RSS feed format. Both formats are nearly conformant with strict validations --only a couple minor issues remain to iron out (such as embedded feed url). Ragardless, they should work fine with feed readers (which are not as strict). (7rans <transfire@gmail.com>)
 
+Changes:
+
 * 2 Minor Enhancements
 
-    * [33muse .rss and .atom extensions[0m
-    * [33mupdates to website[0m
+    * use .rss and .atom extensions
+    * updates to website
 
-[1m
-1.6.0 / 2010-06-22[0m
+
+== 1.6.0 / 2010-06-22
 
  (7rans <transfire@gmail.com>)
 
+Changes:
+
 * 4 Minor Enhancements
 
-    * [33mfix help command add help banners[0m
-    * [33mplugin should use project.root not root, and Syckfile entry needs files not loadpath[0m
-    * [33madd level to syckle plugin[0m
-    * [33mupdate features to use subcommand[0m
+    * fix help command add help banners
+    * plugin should use project.root not root, and Syckfile entry needs files not loadpath
+    * add level to syckle plugin
+    * update features to use subcommand
 
-[1m
-1.5.0 / 2010-05-28[0m
+
+== 1.5.0 / 2010-05-28
 
 This release adds support for Mercurial repositories and Atom newsfeed output format. The commandline inteface has change such that --format/-f is used to select the format instead of using the previous per-format options, e.g. use -f xml instead of --xml. This release also includes some subtantial changes under-the-hood --the first of a two part code refactoring process. (7rans <transfire@gmail.com>)
 
+Changes:
+
 * 2 Major Enhancements
 
-    * [31mre-orient design about vcs classes (partially complete)[0m
-    * [31madd Mercurial support; also renamed VCS to Adapters[0m
+    * re-orient design about vcs classes (partially complete)
+    * add Mercurial support; also renamed VCS to Adapters
 
 * 1 Minor Enhancements
 
-    * [33madjust commandline help[0m
+    * adjust commandline help
 
 * 1 Bug Fixes
 
-    * [32mfixed delta groupings and other improvements[0m
+    * fixed delta groupings and other improvements
 
-[1m
-1.4.0 / 2010-05-26[0m
+
+== 1.4.0 / 2010-05-26
 
 This release includes some basic improvments and a few bug fixes. The primary change you might encounter is the need to use -e or --extra in order to see the detailed Changes list in the Release History. Also changed 'git-log' to 'git log', as it seems the latest versions of git does not support the many executables any longer. SVN support requires xmlsimple library. Note also that SVN support is lack luster at this time becuase it hits the server every time an 'svn log' command is issued which is done once for each tag when a history is generated (any one know a better way?). (7rans <transfire@gmail.com>)
 
+Changes:
+
 * 2 Minor Enhancements
 
-    * [33mneed to use -e or --extra option to see Changes list in release history[0m
-    * [33muse gits --pretty option to simplify parsing[0m
+    * need to use -e or --extra option to see Changes list in release history
+    * use gits --pretty option to simplify parsing
 
-* 4 Bug Fixes
+* 3 Bug Fixes
 
-    * [32mSort release tags in correct order[0m
-    * [32mchange 'git-log' to 'git log'[0m
-    * [32mchange 'git-log' to 'git log'[0m
-    * [32mfix version bumping and display[0m
+    * Sort release tags in correct order
+    * change 'git-log' to 'git log'
+    * change 'git-log' to 'git log'
 
-[1m
-1.3.0 / 2010-02-08[0m
+
+== 1.3.0 / 2010-02-08
 
 For the an end-user the only significant change is the support of 'label:' notation for commit labels. I have found that I am much more apt to use them if they come first in the commit message and that some developers already use the 'label:' notation to specify 'system module' effected --a useful system of labeling. (7rans <transfire@gmail.com>)
 
+Changes:
+
 * 2 Major Enhancements
 
-    * [31muse erb as template system for all formats[0m
-    * [31msupport 'type:' fromat commit types[0m
+    * use erb as template system for all formats
+    * support 'type:' fromat commit types
 
 * 2 Minor Enhancements
 
-    * [33mmove lib/plugin to lib/plugins per new standard or PLugin gem[0m
-    * [33muse rdoc to generate history html (for now)[0m
+    * move lib/plugin to lib/plugins per new standard or PLugin gem
+    * use rdoc to generate history html (for now)
 
-* 1 Bug Fixes
+* 2 Bug Fixes
 
-    * [32msyckle plugin now works with latest vclog changes[0m
+    * fix version bumping and display
+    * syckle plugin now works with latest vclog changes
 
-[1m
-1.2.0 / 2009-10-26[0m
+
+== 1.2.0 / 2009-10-26
 
 Version 1.2 overhuals the internals so that History output is based on scm tags, not on a pre-existing history file. This is really the proper way to go about it and those who use it will, I think, be happily surprised at how it promotes good practices for the maintenance of History files. This overhaul led to substantial changes in the command-line interface. (7rans <transfire@gmail.com>) (7rans <transfire@gmail.com>)
 
+Changes:
+
 * 1 Minor Enhancements
 
-    * [33mrenamed verbose to extra[0m
+    * renamed verbose to extra
 
 * 1 Bug Fixes
 
-    * [32mfixed spelling of revision (from revison)[0m
+    * fixed spelling of revision (from revison)
 
-[1m
-1.1.0 / 2009-10-23[0m
+
+== 1.1.0 / 2009-10-23
 
 This release adds yaml and json formats an improves the command. (7rans <transfire@gmail.com>)
 
-[1m
-1.0.0 / 2009-10-13[0m
+
+== 1.0.0 / 2009-10-13
 
 This is the first "production" release of VCLog. (7rans <transfire@gmail.com>)
 
